Fix Horizontal Scrolling

--- a/css/report.css
+++ b/css/report.css
@@ -121,6 +121,7 @@ tr:nth-of-type(2n + 1) {
 }
 
 #tableview {
-  overflow: scroll;
+  overflow-x: scroll;
+  overflow-y: hidden;
   height: 50vh;
 }
